src/objects/IPM_Financial_Action_Standards__c.object
<CustomObject>
    <fields>
        <fullName>IPM_Financial_Action_Standard_Name__c</fullName>
        <externalId>true</externalId>
        <label>IPM Financial Action Standard Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Financial_Year_Y1_Gross__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Financial Year Y1 Gross</label>
        <referenceTo>IPM_Financial_Year__c</referenceTo>
        <relationshipLabel>IPM Financial Action Standards</relationshipLabel>
        <relationshipName>IPM_Financial_Action_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Financial_Year_Y1_Incremental__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Financial Year Y1 Incremental</label>
        <referenceTo>IPM_Financial_Year__c</referenceTo>
        <relationshipLabel>IPM Financial Action Standards (IPM Financial Year Y1)</relationshipLabel>
        <relationshipName>IPM_Financial_Action_Standards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_GM_Action_Standards_Charter__c</fullName>
        <label>IPM GM % Action Standards Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_IRR_Action_Standard_Charter__c</fullName>
        <label>IPM IRR Action Standard Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Inc_Value_Share_Action_Charter__c</fullName>
        <label>IPM Inc Value Share Action Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Innov_Value_Share_Action_Charter__c</fullName>
        <label>IPM Innov Value Share Action Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_NPV_Action_Standard_Charter__c</fullName>
        <label>IPM NPV Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Payback_Action_Standard_Charter__c</fullName>
        <label>IPM Payback Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Document_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Project Document Section</label>
        <referenceTo>IPM_Project_Document_Section__c</referenceTo>
        <relationshipLabel>IPM Financial Action Standards</relationshipLabel>
        <relationshipName>IPM_Financial_Action_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Span__c</fullName>
        <label>IPM Project Span</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Financial Action Standards</relationshipLabel>
        <relationshipName>IPM_Financial_Action_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_gTO_Action_Standard_Charter__c</fullName>
        <label>IPM gTO Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_iTo_Action_Standard_Charter__c</fullName>
        <label>IPM iTo Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>IPM Financial Action Standard</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>IPM Financial Action Standards Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM Financial Action Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>